force-app/main/default/objects/ampi__Reporting_Period__c/ampi__Reporting_Period__c.object-meta.xml
<CustomObject>
    <description>A period of time for which a project&apos;s targets must be set and results reported</description>
    <label>Reporting Period</label>
    <nameField>
        <displayFormat>RP-{00000}</displayFormat>
        <label>Reporting Period ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reporting Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>