force-app/main/default/objects/ampi__Reporting_Period__c/fields/ampi__Available_For_Financials__c.field-meta.xml
<CustomField>
    <fullName>ampi__Available_For_Financials__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[NOT IN USE]</description>
    <label>Available for Financials</label>
    <type>Checkbox</type>
</CustomField>