force-app/main/default/objects/ampi__Reporting_Period__c/fields/ampi__Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>ampi__Date_Submitted__c</fullName>
    <description>Date field to specify when results were submitted for this reporting period. This field needs to be manually updated, system admins can set up custom automation to populate the field on custom criteria.</description>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>