force-app/main/default/objects/ampi__Reporting_Period__c/fields/ampi__Documents_Required_for_RP__c.field-meta.xml
<CustomField>
    <fullName>ampi__Documents_Required_for_RP__c</fullName>
    <description>Rich text area field to store the list of documents required for submitting results on this reporting period. This is displayed in the Document Upload popup on AddResults.</description>
    <inlineHelpText>List of documents that are required for submission this reporting period</inlineHelpText>
    <label>Required Documents</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>