force-app/main/default/objects/ampi__Reporting_Period__c/fields/ampi__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__Due_Date__c</fullName>
    <description>Date field to define when a particular report is due. This field may be used to schedule notifications to reporters when the due date is nearing.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>