force-app/main/default/objects/ampi__Reporting_Period__c/fields/ampi__Label__c.field-meta.xml
<CustomField>
    <fullName>ampi__Label__c</fullName>
    <description>Text field to specify the human readable name of reporting period.</description>
    <inlineHelpText>Create a name for your reporting period that matches the duration of time that results are reported on. For example, for annual data, enter the “year name”. For quarterly data, enter “Q1 [year name]”.</inlineHelpText>
    <label>Reporting Period Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>