force-app/main/default/objects/ampi__Reporting_Period__c/fields/ampi__Label_Language_2__c.field-meta.xml
<CustomField>
    <fullName>ampi__Label_Language_2__c</fullName>
    <description>Secondary translated version of Label__c. This value is printed in Label_Translated__c when USER_LANGUAGE_CODE = 2.</description>
    <label>Reporting Period Name Language 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>