force-app/main/default/objects/ampi__Reporting_Period__c/fields/ampi__Label_Language_3__c.field-meta.xml
<CustomField>
    <fullName>ampi__Label_Language_3__c</fullName>
    <description>Tertiary translated version of Label__c. This value is printed in Label_Translated__c when USER_LANGUAGE_CODE = 3.</description>
    <label>Reporting Period Name Language 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>