force-app/main/default/objects/ampi__Reporting_Period__c/fields/ampi__Link__c.field-meta.xml
<CustomField>
    <fullName>ampi__Link__c</fullName>
    <description>This formula field stores the hyperlinked Label to reporting period record. This field does not work in Communities, due to the special URLs used there.</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, ampi__Label_Translated__c)</formula>
    <label>Link</label>
    <type>Text</type>
</CustomField>