force-app/main/default/objects/ampi__Reporting_Period__c/fields/ampi__Project__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Project to which a Reporting Period belongs</description>
    <label>Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>Reporting Periods</relationshipLabel>
    <relationshipName>Project_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>