force-app/main/default/objects/ampi__Reporting_Period__c/fields/ampi__Project_Indicator_Count__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project_Indicator_Count__c</fullName>
    <description>[NOT IN USE] Number field to store the count of project indicators that are related to this Reporting Period record</description>
    <inlineHelpText>This field holds the total number of Project Indicators related to this Reporting Period.</inlineHelpText>
    <label>Project Indicator Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>