force-app/main/default/objects/ampi__Reporting_Period__c/fields/ampi__Project_Reporting_Period_Name__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project_Reporting_Period_Name__c</fullName>
    <description>This formula field stores the hyphenated project name-reporting period name</description>
    <formula>ampi__Project__r.Name &amp; &quot; - &quot; &amp; ampi__Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Reporting Period Name</label>
    <type>Text</type>
</CustomField>