force-app/main/default/objects/ampi__Reporting_Period__c/fields/ampi__Report_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__Report_Type__c</fullName>
    <description>Duration of time that results are reported on. This field determines what Project Indicator Reporting Period junction records are generated by the Reporting Period triggers.</description>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Life of Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>