force-app/main/default/objects/ampi__Reporting_Period__c/fields/ampi__Reporting_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__Reporting_Period_End_Date__c</fullName>
    <description>Date field to store the end date for this reporting period. This field determines the primary order in which Reporting Periods are displayed in the dropdown picklist on SetTargets and AddResults.</description>
    <label>Reporting Period End Date</label>
    <type>Date</type>
</CustomField>