force-app/main/default/objects/ampi__Reporting_Period__c/fields/ampi__Reporting_Period_Length__c.field-meta.xml
<CustomField>
    <fullName>ampi__Reporting_Period_Length__c</fullName>
    <description>This formula calculates the length of this reporting period</description>
    <formula>ampi__Reporting_Period_End_Date__c  -  ampi__Reporting_Period_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Period Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>