force-app/main/default/objects/ampi__Reporting_Period__c/fields/ampi__Reporting_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__Reporting_Period_Start_Date__c</fullName>
    <description>Date field to store the start date for this reporting period. This field determines the secondary order in which Reporting Periods are displayed in the dropdown picklist on SetTargets and AddResults.</description>
    <label>Reporting Period Start Date</label>
    <type>Date</type>
</CustomField>