force-app/main/default/objects/ampi__Reporting_Period__c/fields/ampi__Result_Count__c.field-meta.xml
<CustomField>
    <fullName>ampi__Result_Count__c</fullName>
    <description>[NOT IN USE] Number field to store the count of Project Indicators related to this Reporting Period that have had Result data entered</description>
    <inlineHelpText>This field holds the number of Project Indicators related to this Reporting Period that have Result data entered.</inlineHelpText>
    <label>Result Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>