force-app/main/default/objects/ampi__Reporting_Period__c/fields/ampi__Result_Status__c.field-meta.xml
<CustomField>
    <fullName>ampi__Result_Status__c</fullName>
    <description>This picklist field is to specify the status of results for this reporting period. If set to &quot;Submitted&quot;, then the AddResults page is locked from editing for this Reporting Period.</description>
    <label>Result Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <label>Scheduled / In Progress</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>