force-app/main/default/objects/ampi__Reporting_Period__c/fields/ampi__Results_Locked__c.field-meta.xml
<CustomField>
    <fullName>ampi__Results_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to indicate if adding results are locked for this reporting period. If marked as TRUE, then the AddResults page is locked from editing for this Reporting Period.</description>
    <label>Results Locked</label>
    <type>Checkbox</type>
</CustomField>