force-app/main/default/objects/ampi__Reporting_Period__c/fields/ampi__xx_Active__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>