force-app/main/default/objects/ampi__Reporting_Period__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>This field is meant to provide additional context</description>
    <label>Comments</label>
    <length>50</length>
    <type>Text</type>
</CustomField>