force-app/main/default/objects/ampi__Reporting_Period__c/fields/Create_Risk_Review_for_Period__c.field-meta.xml
<CustomField>
    <fullName>Create_Risk_Review_for_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, process builder fires to insert a Risk Review record.</description>
    <inlineHelpText>If you would like a Risk Review record to be generated for this monitoring period, check this box. You can view a Project&apos;s Risk Reviews by going to the Project -&gt; Risks tab -&gt; Risk Reviews subtab.</inlineHelpText>
    <label>Create Risk Review for Period?</label>
    <type>Checkbox</type>
</CustomField>