force-app/main/default/objects/ampi__Reporting_Period__c/fields/Number_of_days_until_due_date__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days_until_due_date__c</fullName>
    <formula>ampi__Due_Date__c - TODAY()</formula>
    <label>Number of days until due date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>