force-app/main/default/objects/ampi__Reporting_Period__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Youth Can</description>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Monitoring Periods</relationshipLabel>
    <relationshipName>Monitoring_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>