force-app/main/default/objects/ampi__Reporting_Period__c/recordTypes/Sos_Youth_Can.recordType-meta.xml
<RecordType>
    <fullName>Sos_Youth_Can</fullName>
    <active>true</active>
    <label>Sos Youth Can</label>
</RecordType>