force-app/main/default/objects/ampi__Reporting_Period__c/listViews/ampi__All.listView-meta.xml
<ListView>
    <fullName>ampi__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>ampi__Label__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ampi__Project_Reporting_Period_Name__c</columns>
    <columns>ampi__Targets_Locked__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>RP-95112,RP-95198,RP-95122,RP-47726,RP-47757,RP-47792,RP-47803,RP-47747</value>
    </filters>
    <label>All</label>
</ListView>