force-app/main/default/objects/ampi__Reporting_Period__c/listViews/Annual_Monitoring_Periods.listView-meta.xml
<ListView>
    <fullName>Annual_Monitoring_Periods</fullName>
    <columns>NAME</columns>
    <columns>ampi__Label__c</columns>
    <columns>ampi__Project_Indicator_Count__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ampi__Report_Type__c</field>
        <operation>equals</operation>
        <value>Annual</value>
    </filters>
    <label>Annual Monitoring Periods</label>
</ListView>