force-app/main/default/objects/ampi__Reporting_Period__c/listViews/Monitoring_Period_Status_Under_Review.listView-meta.xml
<ListView>
    <fullName>Monitoring_Period_Status_Under_Review</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>ampi__Label__c</columns>
    <columns>ampi__Target_Status__c</columns>
    <columns>ampi__Result_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ampi__Result_Status__c</field>
        <operation>equals</operation>
        <value>Under Review</value>
    </filters>
    <filters>
        <field>ampi__Target_Status__c</field>
        <operation>equals</operation>
        <value>Under Review</value>
    </filters>
    <label>Monitoring Period Status Under Review</label>
</ListView>