force-app/main/default/objects/ampi__Reporting_Period__c/listViews/Reports_Due_in_the_next_30_days.listView-meta.xml
<ListView>
    <fullName>Reports_Due_in_the_next_30_days</fullName>
    <columns>NAME</columns>
    <columns>ampi__Label__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Number_of_days_until_due_date__c</field>
        <operation>lessThan</operation>
        <value>30</value>
    </filters>
    <label>Reports Due in the next 30 days</label>
</ListView>