force-app/main/default/objects/ampi__Reporting_Period__c/listViews/Result_Submitted.listView-meta.xml
<ListView>
    <fullName>Result_Submitted</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ampi__Result_Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>Result Submitted</label>
</ListView>