force-app/main/default/objects/ampi__Reporting_Period__c/listViews/Results_Due.listView-meta.xml
<ListView>
    <fullName>Results_Due</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ampi__Result_Status__c</field>
        <operation>equals</operation>
        <value>Submitted_Custom,Submitted Custom</value>
    </filters>
    <label>Results Due</label>
</ListView>